refactor: introduce Flow, FlowV2, FlowV4 and NativeFlow interfaces